<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="312dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_rounded">

    <ImageView
        android:id="@+id/iv_detail"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="27dp"
        android:layout_marginStart="16dp"
        android:src="@mipmap/remix_foreground"
        android:contentDescription="@string/dialog_app_finish_message_caution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRemix"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="44dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_app_update_message_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_detail_delete_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_dialog_rounded_gray"
        android:text="@string/dialog_app_finish_message_cancel"
        android:textColor="#03A9F4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_dialog_rounded_gray_sky"
        android:text="@string/dialog_app_finish_message_update"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>